# PrtLabelData

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: balanced_comparison_100_doc_ids.txt  hard_examples_100_doc_ids.txt
scripts/: export_retrieval_diagnostics.py
src/: serve_labeling.py
static/: labeling_tool.html
